<resources>
    <!-- MainActivity -->
    <string name="app_name">Laboratorio02</string>
    <string name="main_titulo">Menu de opciones</string>
    <string name="btnPrepararPedidos">Preparar Pedidos</string>
    <string name="btnConfig">Configuración</string>
    <string name="btnCategorias">Categorias</string>
    <string name="btnGestionProducto">Productos</string>

    <!-- ListaProductos -->
    <string name="tvSeleccionarCategoria">Seleccionar una categoría</string>
    <string name="tvListaProductos">Lista de productos</string>
    <string name="tvCantidadPedidos">Cantidad a pedir</string>
    <string name="edtProdCantidadDefault">0</string>
    <string name="btnProdAddPedidoText">Agregar</string>

    <!-- Nuevo Pedido -->
    <string name="pedido_titulo">Datos del Pedido</string>
    <string name="pedido_lbl_correo">Correo Electrónico: </string>
    <string name="pedido_lbl_modo_entrega">Modo de Entrega: </string>
    <string name="pedido_lbl_direccion">Dirección de Envío: </string>
    <string name="pedido_lbl_hora_entrega">Hora solicitada (hh:mm): </string>
    <string name="optPedidoRetira">Retira en Local</string>
    <string name="optPedidoEnviar">Enviar a Domicilio</string>
    <string name="edtPedidoHoraEntrega">00:00</string>
    <string name="btnPedidoAddProducto">Agregar Producto</string>
    <string name="btnPedidoQuitarProducto">Quitar Producto</string>
    <string name="tvTotalPedido">Total pedido: $0.00</string>
    <string name="btnPedidoHacerPedido">Hacer Pedido</string>
    <string name="btnPedidoVolver">Volver</string>

    <!-- HistorialPedidos -->
    <string name="tvTituloHistorial">Pedidos realizados</string>
    <string name="btnHistorialNuevo">Nuevo</string>
    <string name="btnHistorialMenu">Menu</string>

    <!-- fila pedidos -->
    <string name="btnCancelarPedido">Cancelar</string>
    <string name="btnVerDetalle">Ver Detalle</string>

    <!-- notification -->
    <string name="canalEstadoNombre">Cambio de Estado de Pedido</string>
    <string name="canalEstadoDescripcion">Este canal se utiliza cuando un pedido cambia de estado</string>

    <!-- firebase -->
    <string name="restoNotificationChannelID">CANAL02</string>
    <string name="restoNotificationChannelName">Resto Notification Channel</string>
    <string name="restoNotificationChannelDescription">Canal usado para las notificaciones push de firebase</string>

    <!-- preferencias -->
    <string name="prefTitle"></string>
    <string name="prefRetirarDefault">Retirar por defecto</string>
    <string name="prefRetirarDefaultSummaryOn">El pedido es para retirar</string>
    <string name="prefRetirarDefaultSummaryOff">El pedido no es para retirar</string>
    <string name="prefCorreoDefault">Correo electrónico</string>
    <string name="prefCorreoDefaultSummary">Se usará por defecto</string>

    <!-- categoria -->
    <string name="tvNombreCategoria">Nombre de la categoria</string>
    <string name="btnCrearCategoria">Guardar</string>
    <string name="btnCategoriaVolver">Volver</string>

    <!-- gestion producto -->
    <string name="tgGestionProdCrearProdOn">Buscar por ID y Actualizar</string>
    <string name="tgGestionProdCrearProdOff">Crear producto nuevo</string>
    <string name="tvGestionProdBuscarProdId">Buscar Producto por ID</string>
    <string name="btnGestionProdBuscarPorId">Buscar por ID</string>
    <string name="tvGestionProdDatosProd">Datos del producto</string>
    <string name="tvGestionProdNombre">Nombre</string>
    <string name="tvGestionProdDescripcion">Descripcion</string>
    <string name="tvGestionProdPrecio">Precio</string>
    <string name="tvGestionProdCategoria">Categoria</string>
    <string name="btnGestionProdGuardar">Guardar</string>
    <string name="btnGestionProdBorrar">Borrar</string>
    <string name="btnGestionProdVolver">Volver</string>
</resources>
