<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoPedido">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_titulo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_correo" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_modo_entrega" />

    <RadioGroup
        android:id="@+id/optPedidoModoEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optPedidoRetira"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optPedidoRetira" />

        <RadioButton
            android:id="@+id/optPedidoEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optPedidoEnviar" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_direccion" />

    <EditText
        android:id="@+id/edtPedidoDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_hora_entrega" />

    <EditText
        android:id="@+id/edtPedidoHoraEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="time"
        android:text="@string/edtPedidoHoraEntrega" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/lstProductosSeleccionados"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPedidoAddProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPedidoAddProducto" />

        <Button
            android:id="@+id/btnPedidoQuitarProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPedidoQuitarProducto" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTotalPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tvTotalPedido" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPedidoHacerPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPedidoHacerPedido" />

        <Button
            android:id="@+id/btnPedidoVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPedidoVolver" />

    </LinearLayout>
</LinearLayout>