<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListaProductos">

    <TextView
        android:id="@+id/tvSeleccionarCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSeleccionarCategoria" />

    <Spinner
        android:id="@+id/cmbProductosCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvListaProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvListaProductos" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lstProductos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/tvCantidadPedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCantidadPedidos" />

    <EditText
        android:id="@+id/edtProdCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:text="@string/edtProdCantidadDefault" />

    <Button
        android:id="@+id/btnProdAddPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btnProdAddPedidoText" />
</LinearLayout>